--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: memoir
 description: "My Personal Password Manager"
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.0
+version: 1.2.0
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
@@ -17,6 +17,7 @@ dependencies:
   font_awesome_flutter:
   gap:
   path:
+  permission_handler: 
   random_password_generator:
   shared_preferences:
   sqflite:
