--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
   "cSpell.words": [
+    "dotenv",
+    "Encrypter",
+    "Hmac",
+    "Parms",
+    "PKCS",
+    "pointycastle",
     "Roboto",
+    "sublist",
     "typecasted",
     "unfocus",
     "xmark"
